# H-SLAM

./: .gitignore  CMakeLists.txt  Main.cpp  Main.h  README.md  build.sh
Analytics/: ComputeCost.xlsx
Examples/: Dataset.cpp  Monocular.cpp
Examples/Extras/: EuRoC.yaml  Euroc.txt  Kitti03.txt
Extras/: Kitti00-02.txt  Kitti04-12.txt
Extras/Calib/: EuRoC.yaml  Kitti00to02.yaml  Kitti03.yaml  Kitti04-12.yaml  TumMono_20-27-33-34.yaml  TumMono_25to26-28to32-35to50.yaml
Include/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  CalibData.h  CoarseTracker.h  DatasetLoader.h  Detector.h  DirectResiduals.h  Display.h  EnergyFunctional.h  EnergyFunctionalStructs.h  Frame.h  GeometricUndistorter.h  GlobalTypes.h  ImmaturePoint.h  IndexThreadReduce.h  IndirectInitializer.h  Initializer.h  Map.h  MapPoint.h  MatrixAccumulators.h  OnlineCalibrator.h  OptimizationClasses.h  OverwritePangolin.h  PangolinOverwrite.h  PixelSelector.h  Projections.h  PythonObj.h  Settings.h  System.h  Undistorter.h  datasetReader.h  geomUndistorter.h  globalTypes.h  nanoflann.h  photometricUndistorter.h
Include/Old/: CoarseInitializer_old.h  Frame.h  Frame_old.h  System_old.h
OldAttempt/Include/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  CalibData.h  CoarseTracker.h  DirectProjection.h  Frame.h  ImmaturePoint.h  IndexThreadReduce.h  Initializer.h  MapPoint.h  Matcher.h  OptimizationClasses.h  PixelSelector.h  System.h  globalTypes.h  photoUndistorter.h
OldAttempt/misc/Intrinsics/: Kitti00to02.yaml  Kitti04-12.yaml  TartanAir.yaml  TumMono_25to26-28to32-35to50.yaml
OldAttempt/src/: AccumulatedTopHessian.cpp  Detector.cpp  EnergyFunctional.cpp  Frame.cpp  Initializer.cpp  Mapper.cpp  Matcher.cpp  OptimizationInfraStuct.cpp  Settings.cpp  System.cpp  geomUndistorter.cpp  photoUndistorter.cpp
Src/: AccumulatedSCHessian.cpp  AccumulatedTopHessian.cpp  CoarseInitializer.cpp  CoarseTracker.cpp  Detector.cpp  Display.cpp  EnergyFunctional.cpp  EnergyFunctionalStructs.cpp  Frame.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  GeometricUndistorter.cpp  ImmaturePoint.cpp  IndirectInitializer.cpp  Initializer.cpp  Map.cpp  MapPoint.cpp  Mapping.cpp  OptimizationClasses.cpp  PixelSelector.cpp  Settings.cpp  System.cpp  Undistorter.cpp
Src/Old/: Frame_old.cpp  ImmaturePoint_old.cpp  IndirectInitializer_old.cpp  System_Old.cpp
Src/PhotometricDistorter/: OnlineCalibrator.cpp  photometricUndistorter.cpp
cmake/: FindG2O.cmake
misc/Intrinsics/: Euroc.yaml  Kitti03.yaml  TumMono_20-27-33-34.yaml
misc/Kitti/: Kitti00-02_640.txt  Kitti03_640.txt  Kitti04-12_640.txt
src/: AccumulatedSCHessian.cpp  CoarseTracker.cpp  Display.cpp  Frame.cpp  ImmaturePoint.cpp  OptimizationClasses.cpp  PixelSelector.cpp  Settings.cpp  System.cpp  main.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseTracker.cpp  FullSystem.cpp  FullSystem.h  FullSystemMarginalize.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector2.cpp  Residuals.cpp
src/IOWrapper/: ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/Indirect/: Detector.cpp  Detector.h  Frame.cpp  Frame.h  IndirectTracker.cpp  LoopCloser.cpp  LoopCloser.h  Map.cpp  Map.h  MapPoint.cpp  MapPoint.h  Matcher.cpp  Matcher.h  Optimizer.cpp  Optimizer.h  Sim3.h  Sim3Solver.cpp
src/OptimizationBackend/: EnergyFunctional.cpp  EnergyFunctionalStructs.cpp
src/util/: DatasetReader.h  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  memUsage.h  settings.cpp  settings.h
